<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/text_view_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_view_label"
            style="@style/widget_label"
            android:text="@string/tv"/>

        <TextView
            android:id="@+id/text_view"
            style="@style/widget_body"
            android:text="@string/tv_value"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/text_view_ems"
            style="@style/widget_body"
            android:layout_marginStart="16dp"
            android:minEms="2"
            android:maxEms="2"
            android:text="@string/ems_value"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_text_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/edit_text_label"
            style="@style/widget_label"
            android:text="@string/et"/>

        <EditText
            android:id="@+id/edit_text"
            style="@style/widget_body"
            android:hint="@string/et_hint"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:autofillHints="@string/et_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/button_label"
            style="@style/widget_label"
            android:text="@string/et"/>

        <Button
            android:id="@+id/button"
            style="@style/widget_body"
            android:text="@string/bt_label"
            android:textColor="@color/colorSecondaryDark"/>

        <TextView
            android:id="@+id/button_value"
            style="@style/widget_label"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/switch_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/switch_label"
            style="@style/widget_label"
            android:text="@string/sw"/>

        <Switch
            android:id="@+id/switch_widget"
            style="@style/widget_body"/>

        <TextView
            android:id="@+id/switch_value"
            style="@style/widget_label"
            android:textStyle="italic"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkbox_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/checkbox_label"
            style="@style/widget_label"
            android:text="@string/cb"/>

        <CheckBox
            android:id="@+id/checkbox"
            style="@style/widget_body"/>

        <TextView
            android:id="@+id/checkbox_value"
            style="@style/widget_label"
            android:textStyle="italic"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toggle_button_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/toggle_button_label"
            style="@style/widget_label"
            android:text="@string/tb"/>

        <ToggleButton
            android:id="@+id/toggle_button"
            style="@style/widget_body"/>

        <TextView
            android:id="@+id/toggle_button_hint"
            style="@style/widget_label"
            android:textStyle="italic|bold"
            android:text="@string/tb_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/calendar_label"
            style="@style/widget_label"
            android:text="@string/cv"/>

        <CalendarView
            android:id="@+id/calendar"
            android:scrollbars="vertical|horizontal"
            android:layout_height="wrap_content"
            android:layout_width="200dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_attributes_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button_attributes"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/layout_2"
            android:onClick="loadAttributesLayout"/>
    </LinearLayout>
</LinearLayout>