<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/text_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_label"
            style="@style/widget_label"
            android:text="@string/field_text"/>

        <EditText
            android:id="@+id/text"
            style="@style/widget_body"
            android:hint="@string/et_hint"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:autofillHints="@string/et_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/name_label"
            style="@style/widget_label"
            android:text="@string/field_person"/>

        <EditText
            android:id="@+id/name"
            style="@style/widget_body"
            android:hint="@string/et_hint"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:autofillHints="@string/et_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/phone_label"
            style="@style/widget_label"
            android:text="@string/field_phone"/>

        <EditText
            android:id="@+id/phone"
            style="@style/widget_body"
            android:hint="@string/et_hint"
            android:inputType="phone"
            android:textColor="@color/colorPrimaryDark"
            android:autofillHints="@string/et_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/number_label"
            style="@style/widget_label"
            android:text="@string/field_number"/>

        <EditText
            android:id="@+id/number"
            style="@style/widget_body"
            android:hint="@string/et_hint"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:autofillHints="@string/et_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/password_label"
            style="@style/widget_label"
            android:text="@string/field_password"/>

        <EditText
            android:id="@+id/password"
            style="@style/widget_body"
            android:hint="@string/et_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:autofillHints="@string/et_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/email_label"
            style="@style/widget_label"
            android:text="@string/field_email"/>

        <EditText
            android:id="@+id/email"
            style="@style/widget_body"
            android:hint="@string/et_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:autofillHints="@string/et_hint"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_widgets_container"
        style="@style/widget_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button_widgets"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/layout_1"
            android:onClick="loadWidgetsLayout"/>
    </LinearLayout>
</LinearLayout>